fixing address bar problem on mobile v1

--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
 	align-items: center;
 	flex-direction: column;
 	max-width: 100vw;
+	position: fixed;
+
+	
+}
+
+.container {
 	background-color: #212931;
 	background-image: url("../images/overlay.png"), 
 	linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
@@ -22,17 +28,8 @@ body {
 	background-position: 60% center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-}
-
-.container {
-	/*background: #212931;
-	background-image: url("../images/overlay.png"), 
-	linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-	url("./bg-img.jpg");
-	background-size: cover;
-	background-position: center;*/
 	text-align: center;
-	height: calc(100vh + 6rem);
+	height: calc(100% + 6rem);
 	width: 100%;
 	display: flex;
 	justify-content: center;
